Bug#36636 - Move fsync out of the #ifdef HAVE_PREAD scope so that it works in either case.